# testing_de

./: .env.dev  .gitignore  Makefile  README.md  Settings.py  TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
docs/sql/: DDL.sql
model/: Settings.py  cities.py  media_data.py  registration_data.py  users.py
resources/: constants.py
src/: main.py  method_of_menu.py  settings.py
src/DataProvider/: DataProviderDB.py  DataProviderURl.py
src/cli/: __init__.py  check_email.py  count_user_add_menu.py  delite_user.py  exit_program.py  invalid_users.py  menu.py  update_param.py  valid_user.py
src/db/: DDL.sql
src/db_use/: __init__.py  dataProvider.py  data_provider.py  ddl.py  get_user.py  save_user.py  user_update.py
src/db_use/validators/: validator_email.py  validator_password.py
src/json_parsing/: __init__.py  get_user.py  pars.py
src/json_parsing/model/: cities.py  contactDetails.py  contact_details.py  coordinates.py  dob.py  location.py  locations.py  media_data.py  name.py  registered.py  registration_data.py  street.py  users.py
src/model/: locations.py
src/resources/: DDL.sql
src/validators/: __init__.py  validator_email.py  validator_password.py
tests/: conftest.py  test_DataProviderDB.py  test_DataProviderURL.py  test_data_provider.py  test_get_user.py  test_get_users_url.py  test_validator_email.py  test_validator_pass.py  test_validator_password.py  test_velidator_email.py  validator_email.py
